syntax = "proto3";

import "github.com/cohix/simplcrypto/proto/message.proto";
import "github.com/cohix/simplcrypto/proto/keypair.proto";

package taask.server.model;
option go_package = "github.com/taask/taask-server/model";

message Task {
	string UUID = 1;
	string Kind = 2;
	simpl.crypto.SerializablePubKey ResultPubKey = 3;
	bytes Body = 4;
	string status = 5;
	repeated string Annotations = 6;
	simpl.crypto.Message EncResult = 7;
	simpl.crypto.Message EncResultSymKey = 8;
}

message QueueTaskResponse {
	string UUID = 1;
}

message CheckTaskRequest {
	string UUID = 1;
}

message CheckTaskResponse {
	string status = 1;
	int32 progress = 2;
	TaskUpdate result = 3;
}

message TaskUpdate {
	string UUID = 1;
	string status = 2;
	simpl.crypto.Message EncResult = 3;
	simpl.crypto.Message EncResultSymKey = 4;
}